SONARPY-2508 Rewrite and simplify Dockerfile
GitOrigin-RevId: 716e2c4585af986cf0bd0a96410d0c2e1e311bf9